index first change

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>I'm Preet Makani</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://cdn.onlinewebfonts.com/svg/img_211943.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div id="particles-js"></div>
