--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>I'm Preet Makani</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://cdn.onlinewebfonts.com/svg/img_211943.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
 </head>
 <body>
     <div id="particles-js"></div>
@@ -20,8 +21,12 @@
                 <div class="profileImage">
                 </div>      
             </div>
+           
+            <div class="name">
+                <h1 style="color:white; font-weight: bold; text-align: center; overflow: hidden;; ">Preet Makani</h1>
+            </div>
             <div class="info">
-                <h1>Preet Makani</h1>
+                
                <bold> <p style="color:#aaa2a2; font-weight: bold;"></bold>
                     Software Engineering Student <a href="https://uwaterloo.ca/future-students/programs/software-engineering" style="color: purple;">@Waterloo</a>
                 </p> 
