preet@DESKTOP-491QJVD MINGW64 ~/Desktop/myWebsite (master) $ git init Reinitialized existing Git repository in C:/Users/preet/Desktop/myWebsite/.git/ g preet@DESKTOP-491QJVD MINGW64 ~/Desktop/myWebsite (master) $ git remote -v origin  https://github.com/preetmakani/preetmakani.git (fetch) origin  https://github.com/preetmakani/preetmakani.git (push)
preet@DESKTOP-491QJVD MINGW64 ~/Desktop/myWebsite (master)
$ git add index.html

preet@DESKTOP-491QJVD MINGW64 ~/Desktop/myWebsite (master)
$ git commit -m

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             <div class="info">
                 
                <bold> <p style="color:#aaa2a2; font-weight: bold;"></bold>
-                    Software Engineering Student <a href="https://uwaterloo.ca/future-students/programs/software-engineering" style="color: purple;">@Waterloo</a>
+                    Software Engineering Student <a href="https://uwaterloo.ca/future-students/programs/software-engineering" style="color: purple;" target="_blank">@Waterloo</a>
                 </p> 
             </div>
             <div id="ref">
 
-                 <a href="https://www.linkedin.com/in/preet-makani-a14481178/">
-                    <i class="fab fa-linkedin" style=" color: #0077B5;"></i>
+                 <a href="https://www.linkedin.com/in/preet-makani-a14481178/" target="_blank">
+                    <i class="fab fa-linkedin" style=" color: #0077B5;" ></i>
                  </a>              
-                 <a href="mailto:preet.makani@gmail.com">
+                 <a href="mailto:preet.makani@gmail.com" target="_blank">
                     <i class="fas fa-comments"></i>
                  </a>
                  <a href="resources/Resume.pdf" style="color: #ff0000;">
