--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
            
             <div class="name">
-                <h1 style="color:white; font-weight: bold; text-align: center; overflow: hidden;; ">Preet Makani</h1>
+                <h1>Preet Makani</h1>
             </div>
             <div class="info">
                 
