--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                  <a href="mailto:preet.makani@gmail.com" target="_blank">
                     <i class="fas fa-comments"></i>
                  </a>
-                 <a href="resources/Resume.pdf" style="color: #ff0000;">
+                 <a href="resources/resume.pdf" style="color: #ff0000;" target="_blank">
                     <i class="fas fa-file-pdf"></i>
                 </a>
             </div>
