--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                  <a href="resources/resume.pdf" style="color: #ff0000;" target="_blank">
                     <i class="fas fa-file-pdf"></i>
                 </a>
+                <a href="https://github.com/preetmakani" target="_blank">
+                    <i class="fab fa-github" style=" color: #0077B5;" ></i>
+                 </a>     
             </div>
            
         </div>
