--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 </head>
 <body>
-    <div id="particles-js"></div>
+    <div class="container">
+    <div id="particles-js">
     <script type="text/javascript" src="particles.js"></script>
     <script type="text/javascript" src="app.js"></script>
 
-    <dic class="container">
         <div class="content">
             <div class="image-cropper">
                 <div class="profileImage">
@@ -48,7 +48,22 @@
             </div>
            
         </div>
-    </dic>
+
+        <a href="#down" class="scroll-down">
+            <div id="down">
+                <div class="mouse">
+                    <span></span>
+                </div>
+            </div>
+
+            <div class="arrow">
+                <span></span>
+            </div>
+        </a>
+    </div>
     
+    <div class="information">
+
+    </div>
 </body>
 </html>
