making page full-screen

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
            
         </div>
 
-        <a href="#down" class="scroll-down">
+    <!--<a href="#down" class="scroll-down"> 
             <div id="down">
                 <div class="arrow">
                     <span></span>
@@ -61,5 +61,7 @@
     <div class="information">
 
     </div>
+    --> 
+    
 </body>
 </html>
